--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
           SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
-        run: node scripts/spotify_import.mjs
+        run: node scripts/scripts/spotify_import.mjs
       - run: npm run test
       - name: Commit updated items.json
         uses: stefanzweifel/git-auto-commit-action@v5
