--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -24,3 +24,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: import tracks from playlists"
+          file_pattern: public/data/items.json
